working on ddevelop branch

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <!-- hero section start -->
     <section class="hero">
         <div class="hero-cta">
-            <h2>Subtitle goes here!</h2>
+            <section>
+                <img src="./assets/images/comp_hardware.jpeg" alt="Computer Processor">
+            </section>
         </div>
 
         <article id="about-me" class="intro"> 
@@ -54,9 +56,34 @@
                 <h2>
                     Work
                 </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas at vitae, autem, ea recusandae quasi sint quam incidunt minus labore pariatur rem! Soluta reiciendis voluptatibus, ullam autem debitis at voluptatem!
-                    </p>
+                <div class="box">
+                    <div>
+                        Run-Buddy
+                        <img class="pictures"
+                        src="./assets/images/Run Buddy.png" alt="Run-Buddy-Project">
+                    </div>
+                    <div>
+                        Horiseon
+                        <img class="pictures"
+                        src="./assets/images/Horiseon.png" alt="Horiseon">
+                    </div>
+                    <div>
+                        Calculator
+                        <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/300"></a>
+                    </div>
+                    <div>
+                        Project#1
+                        <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/300"></a>
+                    </div>
+                    <div>
+                        Project#2
+                        <a href="https://placeholder.com">
+                        <img src="https://via.placeholder.com/300"></a>
+                    </div>
+
+                </div>
             </div>
         </article>
 
