--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>
             Kazi Islam
         </h1>
+        <img src="./assets/images/img_avatar.png" alt="Avatar" class="avatar">
         <!-- start of nav bar here -->
         <nav>
             <ul>
@@ -41,51 +42,49 @@
             </section>
         </div>
 
-        <article id="about-me" class="intro"> 
-            <div class="flex-row">
-                <h2>
-                    About Me
-                </h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam laudantium in cumque laborum illum reprehenderit recusandae, aut placeat praesentium! Doloremque, quod voluptates nobis similique consequuntur laboriosam ratione? Sunt, eum?
-                </p>
-        </article>
+        <div>
+            <article id="about-me" class="intro"> 
+                <div class="flex-row">
+                    <h2>
+                        About Me
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam laudantium in cumque laborum illum reprehenderit recusandae, aut placeat praesentium! Doloremque, quod voluptates nobis similique consequuntur laboriosam ratione? Sunt, eum?
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto iste reprehenderit molestias eligendi vel quaerat natus ex sed quae labore cumque modi, similique sit, eius, error perspiciatis. Explicabo, consequatur veritatis!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repudiandae iusto libero iste, molestiae aut odit blanditiis rerum quaerat ut sapiente totam minima eaque recusandae vel. Veniam nam maiores eveniet.
+                    </p>
+            </article>
 
-        <article id="work" class="work">
-            <div class="flex-row">
-                <h2>
-                    Work
-                </h2>
-                <div class="box">
-                    <div>
-                        Run-Buddy
-                        <img class="pictures"
-                        src="./assets/images/Run Buddy.png" alt="Run-Buddy-Project">
+            <article id="work" class="work">
+                <div class="flex-row">
+                    <h2>
+                        Work
+                    </h2>
+                    <div class="box">
+                        <div>
+                            <img class="pictures"
+                            src="./assets/images/Run Buddy.png" alt="Run-Buddy-Project">
+                        </div>
+                        <div>
+                            <img class="pictures"
+                            src="./assets/images/Horiseon.png" alt="Horiseon">
+                        </div>
+                        <div>
+                            <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/300"></a>
+                        </div>
+                        <div>
+                            <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/300"></a>
+                        </div>
+                        <div>
+                            <a href="https://placeholder.com">
+                            <img src="https://via.placeholder.com/300"></a>
+                        </div>
                     </div>
-                    <div>
-                        Horiseon
-                        <img class="pictures"
-                        src="./assets/images/Horiseon.png" alt="Horiseon">
-                    </div>
-                    <div>
-                        Calculator
-                        <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/300"></a>
-                    </div>
-                    <div>
-                        Project#1
-                        <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/300"></a>
-                    </div>
-                    <div>
-                        Project#2
-                        <a href="https://placeholder.com">
-                        <img src="https://via.placeholder.com/300"></a>
-                    </div>
-
                 </div>
-            </div>
-        </article>
+            </article>
+        
 
         <article id="resume" class="resume">
             <div class="flex-row">
@@ -94,6 +93,8 @@
                 </h2>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque maxime dolore aspernatur odit totam. Error praesentium dolores, qui ex repudiandae aspernatur, rerum eligendi atque inventore est iste numquam beatae temporibus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur asperiores ex animi veritatis! Facilis incidunt nam in temporibus? Laudantium adipisci nemo eveniet at provident, reprehenderit quidem tempore consectetur doloremque perspiciatis?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi hic facilis eveniet voluptatem? Corporis quae expedita dolores possimus praesentium harum incidunt, laudantium asperiores consectetur veniam, ad minus enim itaque hic.
                 </p>
             </div>
         </article>
@@ -101,13 +102,26 @@
         <article id="contact" class="contact">
             <div class="flex-row">
                 <h2>
-                    Contact
+                    Contact Me
                 </h2>
-                <address>
+                <p>
                     Email: <a href="mailto:kazi@portfolio.info">kazi@portfolio.info</a>
-                </address>
+                </p>
+                <p>
+                    Phone: <a href="952.952.9529">952.952.9529</a>
+                </p>
+                <p>
+                    Github: <a href="https://github.com/kazichaska/">https://github.com/kazichaska/</a>
+                </dp>
+                <p>
+                    Twitter: <a href="#">Twitter</a>
+                </p>
+                <p>
+                    Spotify: <a href="#">Spotify</a>
+                </p>
             </div>
         </article>
+        </div>
 
     </section>
 
