--- a/index.html
+++ b/index.html
@@ -61,26 +61,26 @@
                         Work
                     </h2>
                     <div class="box">
-                        <div>
-                            <img class="pictures"
-                            src="./assets/images/Run Buddy.png" alt="Run-Buddy-Project">
-                        </div>
-                        <div>
-                            <img class="pictures"
-                            src="./assets/images/Horiseon.png" alt="Horiseon">
-                        </div>
-                        <div>
-                            <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/300"></a>
-                        </div>
-                        <div>
-                            <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/300"></a>
-                        </div>
-                        <div>
-                            <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/300"></a>
-                        </div>
+                            <div id="run-buddy">
+                                <a href="https://kazichaska.github.io/run-buddy/">
+                                    <img class="pictures"
+                                    src="./assets/images/Run Buddy.png" alt="Run-Buddy-Project">
+                                </a>
+                            </div>
+                            <div id="horiseon">
+                                <a>
+                                <a href="https://kazichaska.github.io/horiseon/">
+                                    <img class="pictures"
+                                    src="./assets/images/Horiseon.png" alt="Horiseon">
+                                </a>
+                            </div>
+                            <div id="html-css">
+                                <a>
+                                    <a href="#">
+                                    <img class="pictures"
+                                    src="./assets/images/html-css.jpeg"></a>
+                                </a>
+                            </div>
                     </div>
                 </div>
             </article>
@@ -99,26 +99,22 @@
             </div>
         </article>
 
-        <article id="contact" class="contact">
+        <article class="contact">
             <div class="flex-row">
                 <h2>
                     Contact Me
                 </h2>
-                <p>
-                    Email: <a href="mailto:kazi@portfolio.info">kazi@portfolio.info</a>
-                </p>
-                <p>
-                    Phone: <a href="952.952.9529">952.952.9529</a>
-                </p>
-                <p>
-                    Github: <a href="https://github.com/kazichaska/">https://github.com/kazichaska/</a>
-                </dp>
-                <p>
-                    Twitter: <a href="#">Twitter</a>
-                </p>
-                <p>
-                    Spotify: <a href="#">Spotify</a>
-                </p>
+                <div>
+                    <p>
+                        Email: <a href="mailto:kazi@portfolio.info">kazi@portfolio.info</a>
+                    </p>
+                    <p>
+                        Phone: <a href="952.952.9529">952.952.9529</a>
+                    </p>
+                    <p>
+                        Github: <a href="https://github.com/kazichaska/">https://github.com/kazichaska/</a>
+                    </p>
+                </div>
             </div>
         </article>
         </div>
