fixed work section

--- a/index.html
+++ b/index.html
@@ -68,18 +68,16 @@
                                 </a>
                             </div>
                             <div id="horiseon">
-                                <a>
                                 <a href="https://kazichaska.github.io/horiseon/">
                                     <img class="pictures"
                                     src="./assets/images/Horiseon.png" alt="Horiseon">
                                 </a>
                             </div>
                             <div id="html-css">
-                                <a>
-                                    <a href="#">
-                                    <img class="pictures"
-                                    src="./assets/images/html-css.jpeg"></a>
-                                </a>
+                                    <a href="./assets/images/html-css.jpeg">
+                                        <img class="pictures"
+                                        src="./assets/images/html-css.jpeg" alt="HTML CSS">
+                                    </a>
                             </div>
                     </div>
                 </div>
