update some comments

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </section>
         </div>
 
+        <!-- About me section starts  -->
         <div>
             <article id="about-me" class="intro"> 
                 <div class="flex-row">
@@ -54,7 +55,9 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repudiandae iusto libero iste, molestiae aut odit blanditiis rerum quaerat ut sapiente totam minima eaque recusandae vel. Veniam nam maiores eveniet.
                     </p>
             </article>
+            <!-- About me section ends  -->
 
+            <!-- Work section starts  -->
             <article id="work" class="work">
                 <div class="flex-row">
                     <h2>
@@ -82,8 +85,9 @@
                     </div>
                 </div>
             </article>
+            <!-- work section ends -->
         
-
+        <!-- Resume section starts  -->
         <article id="resume" class="resume">
             <div class="flex-row">
                 <h2>
@@ -96,7 +100,9 @@
                 </p>
             </div>
         </article>
+        <!-- Resume section ends  -->
 
+        <!-- Contact me section starts  -->
         <article class="contact">
             <div class="flex-row">
                 <h2>
@@ -115,10 +121,12 @@
                 </div>
             </div>
         </article>
+        <!-- Contact me section ends  -->
         </div>
 
     </section>
 
+    <!-- footer section starts -->
     <footer>
         <div>
             <h2>♥ Made with love by Kazi Islam.</h2>
@@ -126,7 +134,7 @@
                 &copy; 2021 Kazi Islam, LLC.
         </div> 
     </footer>
-    <!-- footer ends -->
+    <!-- footer section ends -->
 
 </body>
 </html>
