--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                                 </a>
                             </div>
                             <div id="html-css">
-                                    <a href="./assets/images/html-css.jpeg">
+                                    <a href="./assets/images/sportlytics.png">
                                         <img class="pictures"
-                                        src="./assets/images/html-css.jpeg" alt="HTML CSS">
+                                        src="./assets/images/sportlytics.png" alt="Sportlytics">
                                     </a>
                             </div>
                     </div>
