added saysomething stuff

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                                         src="./assets/images/sportlytics.png" alt="Sportlytics">
                                     </a>
                             </div>
+                            <div id="html-css">
+                                <a href="./assets/images/saysomething.png">
+                                    <img class="pictures"
+                                    src="./assets/images/saysomething.png" alt="SaySomething">
+                                </a>
+                        </div>
                     </div>
                 </div>
             </article>
